@@ -77,6 +77,9 @@ Build
 Windows
 -------
 
+- Issue #23465: Implement PEP 486 - Make the Python Launcher aware of virtual
+  environments. Patch by Paul Moore.
+
 - Issue #23437: Make user scripts directory versioned on Windows. Patch by Paul
   Moore.
 
